# cyhdev

./: .gitignore  Cargo.toml  README.md  upx.sh
.cargo/: config.toml
assets/: another-page.html  index.html
front/: blog.html  index.html
legacy/src/: main.rs
legacy/src/db_io/: schema.rs  schema_rust.rs
legacy/src/handlers/: health_check.rs  health_check_aws.rs
legacy/src/handlers/api/: submit_message.rs
legacy/src/server_init/: server_init.rs  state_init.rs
legacy/src/utils/: bool_to_emoji.rs
src/: main.rs
src/handlers/healthcheck_handlers/: fallback.rs  healthcheck.rs  quotes.rs  systemcheck.rs
src/server_init/: server_init.rs  server_init_proc.rs  server_state_model.rs  state_init.rs
src/utils/misc_utils/: bool_to_emoji.rs
src/utils/time_utils/: format_datetime_difference.rs
