[package]
name = "cyhdev"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
incremental = false
strip = true
panic = "abort"

[profile.dev]
debug = true
panic = "abort"

[dependencies]
#error handling
anyhow = "1.0.83"
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "std", "now"] }
#rayon = "1.10.0"

#datetime

#serializeation
#serde = "1.0.200"
#serde_derive = { version = "1.0.200", features = ["deserialize_in_place"] }
#serde_json = "1.0.116"
#bincode = "1.3.3"

#crypto/secrets/whatever
rpassword = "7.3.1"

#async, parallelism, concurrency
tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
#rayon = "1.10.0"

#logging and self-analysis
#sysinfo = "0.30.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
#num_cpus = "1.16.0"
