[package]
name = "cyhdev"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
panic = "abort"

[profile.dev]
debug = true
panic = "abort"

[dependencies]
#error handling
anyhow = "1.0.86"

#framework
axum = { version = "0.7.5", default-features = false, features = [
    "form",
    "http2",
    "json",
    "matched-path",
    "original-uri",
    "query",
    "tokio",
    "tower-log",
    "tracing",
    "macros",
] } #is the web framework
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tower-http = { version = "0.5.2", features = ["fs"] }
#axum-extra = { version = "0.9.3", features = ["cookie"] }

#datetime
chrono = { version = "0.4.38", default-features = false, features = [
    "alloc",
    "std",
    "now",
    "serde",
] }

#db/sql
tokio-postgres = { version = "0.7.11", features = [
    "with-uuid-1",
    "with-serde_json-1",
    "with-chrono-0_4",
] }
deadpool-postgres = "0.14.0"

#rng
rand = "0.8.5"

#serialization
serde = "1.0.208"
serde_derive = { version = "1.0.208", features = ["deserialize_in_place"] }
serde_json = "1.0.125"
#bincode = "1.3.3" #use extensively this time

#crypto/secrets/whatever
rpassword = "7.3.1"

#async, parallelism, concurrency
tokio = { version = "1.39.3", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
#rayon = "1.10.0"

#logging and self-analysis
sysinfo = "0.31.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
